--- a/about.html
+++ b/about.html
@@ -85,26 +85,29 @@
     <!-- Hero -->
     <div class="flex flex-col gap-8 justify-center items-center text-center h-screen px-4 lg:w-3/5 lg:m-auto lg:px-0">
         <div>
-            <h1 class="text-6xl font-medium">Get to know more about me.</h1>
-            <h2 class="font-light text-gray-400 mt-10">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</h2>
+            <h1 class="text-3xl font-medium">Get to know more about me.</h1>
+            <h2 class="font-light text-gray-400 mt-10">I’m Sumit, a UI/UX Designer with 3.3 years of experience creating user-first digital products that balance function and form. From healthcare platforms to enterprise tools, I’ve crafted experiences that make complex systems feel intuitive. My approach blends thoughtful design, usability principles, and a strong grasp of user needs to deliver solutions that truly work.</h2>
+            <h2 class="font-light text-gray-400 mt-10">With skills in Figma, HTML/CSS, and design thinking, I thrive in collaborative environments where creativity meets clarity. I’m driven by curiosity, precision, and the belief that great design solves real problems—quietly, effectively, and with just the right amount of flair.</h2>
         </div>
         
-        <button class="bg-gray-800 text-white hover:text-amber-300 font-semibold py-4 px-8 rounded-full transition duration-500 ease-in-out inline-block w-max">View Resume</button>
+        <a href="./images/general/Résumé_SumitNikhare.pdf"><button class="bg-gray-800 text-white hover:text-amber-300 font-semibold py-4 px-8 rounded-full transition duration-500 ease-in-out inline-block w-max">View Resume</button></a>
     </div>
 
     <div class="flex flex-col gap-16">
+        <hr class="border-t-2 border-gray-700 mx-4 my-8 lg:w-3/5 lg:mx-auto">
+
         <!-- Skills -->
         <div class="flex flex-col gap-12 px-4 lg:w-3/5 lg:m-auto lg:px-0">
             <!-- Section Header -->
-            <div class="flex flex-col gap-8 justify-center items-center">
-                <div class="flex flex-col gap-2 items-center">
-                    <p class="text-3xl font-bold">Skills</p>
+            <div class="flex flex-col gap-8">
+                <div class="flex flex-col gap-2">
+                    <p class="text-2xl font-bold">Skills</p>
                     <div class="border-b-4 border-yellow-400 w-16"></div>
                 </div>
 
-                <p class="text-gray-400 text-center">CHIP V2.0 is a healthcare software developed by Khushi Baby NGO to digitize and manage public health operations at the last mile. The platform includes modules for Login, Attendance (Punch-IN), User Profiles, Digital Health Survey (DHS) Role-Based Access Control (RBAC), and critical health programs like ABHA linkage, Family Planning, and tracking Maternal and Infant Mortality (IMR/MMR).</p>
+                <p class="text-gray-400">A versatile design toolkit combining user research, interaction design, visual aesthetics, and front-end execution to build thoughtful, user-centered products.</p>
 
-                <div class="flex flex-wrap gap-2 items-center text-center justify-center">
+                <!-- <div class="flex flex-wrap gap-2">
                     <span class="py-4 px-8 bg-gray-800 rounded-full">UX Research</span>
                     <span class="py-4 px-8 bg-gray-800 rounded-full">Wireframing</span>
                     <span class="py-4 px-8 bg-gray-800 rounded-full">UX Strategy</span>
@@ -114,6 +117,31 @@
                     <span class="py-4 px-8 bg-gray-800 rounded-full">Motion Design</span>
                     <span class="py-4 px-8 bg-gray-800 rounded-full">Project Management</span>
                     <span class="py-4 px-8 bg-gray-800 rounded-full">Video Editing</span>
+                </div> -->
+
+                <div class="flex flex-col gap-2">
+                    <p class="font-medium text-yellow-400">Core UX/UI Skills</p>
+                    <p class="text-xl text-gray-300">Skilled in user research, UX strategy, wireframing, journey mapping, information architecture, heuristic evaluation, usability testing, and A/B testing.</p>
+                </div>
+
+                <div class="flex flex-col gap-2">
+                    <p class="font-medium text-yellow-400">UI & Visual Design</p>
+                    <p class="text-xl text-gray-300">Proficient in visual design, typography, branding, interaction design, design systems, and motion design.</p>
+                </div>
+
+                <div class="flex flex-col gap-2">
+                    <p class="font-medium text-yellow-400">Tools & Software</p>
+                    <p class="text-xl text-gray-300">Experienced with Figma, Sketch, InVision, Adobe Illustrator, Adobe After Effects, and Chrome DevTools.</p>
+                </div>
+
+                <div class="flex flex-col gap-2">
+                    <p class="font-medium text-yellow-400">Front-End & Development</p>
+                    <p class="text-xl text-gray-300">Comfortable working with HTML5, CSS3, TailwindCSS, Bootstrap, and Android (Relay Plugin).</p>
+                </div>
+
+                <div class="flex flex-col gap-2">
+                    <p class="font-medium text-yellow-400">Collaboration & Process</p>
+                    <p class="text-xl text-gray-300">Strong understanding of design thinking, agile methodologies, project management, cross-functional collaboration, and data-driven decision-making using tools like Asana.</p>
                 </div>
             </div>
         </div>
@@ -123,13 +151,13 @@
         <!-- Experience -->
         <div class="flex flex-col gap-12 px-4 lg:w-3/5 lg:m-auto lg:px-0">
             <!-- Section Header -->
-            <div class="flex flex-col gap-8 justify-center items-center">
-                <div class="flex flex-col gap-2 items-center">
-                    <p class="text-3xl font-bold">Experience</p>
+            <div class="flex flex-col gap-8">
+                <div class="flex flex-col gap-2">
+                    <p class="text-2xl font-bold">Experience</p>
                     <div class="border-b-4 border-yellow-400 w-16"></div>
                 </div>
 
-                <p class="text-gray-400 text-center lg:w-4/5">CHIP V2.0 is a healthcare software developed by Khushi Baby NGO to digitize and manage public health operations at the last mile. The platform includes modules for Login, Attendance (Punch-IN), User Profiles, Digital Health Survey (DHS) Role-Based Access Control (RBAC), and critical health programs like ABHA linkage, Family Planning, and tracking Maternal and Infant Mortality (IMR/MMR).</p>
+                <p class="text-gray-400">A track record of collaborating across teams to craft impactful design solutions, backed by research, strategy, and iteration.</p>
 
                 <section class="py-4 text-white w-full">
                     <div class="mx-auto">
@@ -137,7 +165,7 @@
                         <div class="mb-6 border border-gray-800 rounded-xl overflow-hidden">
                             <button onclick="toggleExperience(this)" class="w-full flex justify-between items-center px-6 py-4 bg-gray-900 hover:bg-gray-800 transition-all">
                             <div class="flex flex-col gap-1 text-left">
-                                <p class="text-sm text-gray-400">Khushi Baby (Non-Profit NGO)</p>
+                                <p class="text-sm text-yellow-400">Khushi Baby (Non-Profit NGO)</p>
                                 <h3 class="text-lg font-semibold">UI/UX Designer - L3</h3>
                                 <p class="text-sm text-gray-400">Jan 2023 - Present</p>
                             </div>
@@ -161,7 +189,7 @@
                         <div class="mb-6 border border-gray-800 rounded-xl overflow-hidden">
                             <button onclick="toggleExperience(this)" class="w-full flex justify-between items-center px-6 py-4 bg-gray-900 hover:bg-gray-800 transition-all">
                             <div class="flex flex-col gap-1 text-left">
-                                <p class="text-sm text-gray-400">Permute Solutions Pvt. Ltd.</p>
+                                <p class="text-sm text-yellow-400">Permute Solutions Pvt. Ltd.</p>
                                 <h3 class="text-lg font-semibold">Associate UI/UX Designer</h3>
                                 <p class="text-sm text-gray-400">Mar 2023 - Dec 2023</p>
                             </div>
@@ -176,7 +204,7 @@
                         <div class="mb-6 border border-gray-800 rounded-xl overflow-hidden">
                             <button onclick="toggleExperience(this)" class="w-full flex justify-between items-center px-6 py-4 bg-gray-900 hover:bg-gray-800 transition-all">
                             <div class="flex flex-col gap-1 text-left">
-                                <p class="text-sm text-gray-400">Reddway.In</p>
+                                <p class="text-sm text-yellow-400">Reddway.In</p>
                                 <h3 class="text-lg font-semibold">UI/UX Design Intern</h3>
                                 <p class="text-sm text-gray-400">May 2021 - Jul 2021</p>
                             </div>
@@ -200,13 +228,13 @@
         <!-- Education -->
         <div class="flex flex-col gap-12 px-4 lg:w-3/5 lg:m-auto lg:px-0">
             <!-- Section Header -->
-            <div class="flex flex-col gap-8 justify-center items-center">
-                <div class="flex flex-col gap-2 items-center">
+            <div class="flex flex-col gap-8">
+                <div class="flex flex-col gap-2">
                     <p class="text-3xl font-bold">Education</p>
                     <div class="border-b-4 border-yellow-400 w-16"></div>
                 </div>
 
-                <p class="text-gray-400 text-center">CHIP V2.0 is a healthcare software developed by Khushi Baby NGO to digitize and manage public health operations at the last mile. The platform includes modules for Login, Attendance (Punch-IN), User Profiles, Digital Health Survey (DHS) Role-Based Access Control (RBAC), and critical health programs like ABHA linkage, Family Planning, and tracking Maternal and Infant Mortality (IMR/MMR).</p>
+                <p class="text-gray-400">Formal education in design principles, human behavior, and digital technologies, forming a strong base for user-focused problem-solving.</p>
 
                 <div class="flex flex-col gap-8 lg:flex-row bg-gray-900 rounded-3xl p-6 mx-4 w-full">
                     <div class="flex flex-col items-center w-full">
@@ -231,24 +259,21 @@
         <!-- Aside from design ... -->
         <div class="flex flex-col gap-12 px-4 lg:w-3/5 lg:m-auto lg:px-0">
             <!-- Section Header -->
-            <div class="flex flex-col gap-8 justify-center items-center">
-                <div class="flex flex-col gap-2 items-center">
+            <div class="flex flex-col gap-8">
+                <div class="flex flex-col gap-2">
                     <p class="text-3xl font-bold">Aside from design...</p>
                     <div class="border-b-4 border-yellow-400 w-16"></div>
                 </div>
 
-                <p class="text-gray-400 text-center">When I'm not at my desk, you'll find me diving into the ocean, running marathons, and traveling the world.</p>
+                <p class="text-gray-400">A curious mind beyond the interface—exploring art, storytelling, human behavior, and slow living practices that fuel my creativity and deepen my empathy.</p>
 
-                <div class="flex flex-wrap gap-2 items-center text-center justify-center">
-                    <span class="py-4 px-8 bg-gray-800 rounded-full">UX Research</span>
-                    <span class="py-4 px-8 bg-gray-800 rounded-full">Wireframing</span>
-                    <span class="py-4 px-8 bg-gray-800 rounded-full">UX Strategy</span>
-                    <span class="py-4 px-8 bg-gray-800 rounded-full">Branding</span>
-                    <span class="py-4 px-8 bg-gray-800 rounded-full">Visual Design</span>
-                    <span class="py-4 px-8 bg-gray-800 rounded-full">Typography</span>
-                    <span class="py-4 px-8 bg-gray-800 rounded-full">Motion Design</span>
-                    <span class="py-4 px-8 bg-gray-800 rounded-full">Project Management</span>
-                    <span class="py-4 px-8 bg-gray-800 rounded-full">Video Editing</span>
+                <div class="flex flex-wrap gap-2">
+                    <span class="py-4 px-8 bg-gray-800 rounded-full">Storytelling</span>
+                    <span class="py-4 px-8 bg-gray-800 rounded-full">Anime & Visual Culture</span>
+                    <span class="py-4 px-8 bg-gray-800 rounded-full">Journaling</span>
+                    <span class="py-4 px-8 bg-gray-800 rounded-full">Systems Thinking</span>
+                    <span class="py-4 px-8 bg-gray-800 rounded-full">Sketching or Doodling</span>
+                    <span class="py-4 px-8 bg-gray-800 rounded-full">Nature & Observing People</span>
                 </div>
             </div>
         </div>
