--- a/tarp.html
+++ b/tarp.html
@@ -144,9 +144,9 @@
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
 
-            <p class="text-gray-400">Led the entire design process across modules and user levels—translating complex workflows into intuitive, role-sensitive experiences.</p>
+            <p class="text-gray-400">As the lead designer for the TARP Design System, I owned the end-to-end process of building a scalable and cohesive UI foundation. My responsibilities spanned strategic planning, system architecture, visual design, and cross-functional collaboration.</p>
 
-            <div class="flex flex-wrap gap-2">
+            <!-- <div class="flex flex-wrap gap-2">
                 <span class="py-4 px-8 bg-gray-800 rounded-full">UX Research</span>
                 <span class="py-4 px-8 bg-gray-800 rounded-full">Wireframing</span>
                 <span class="py-4 px-8 bg-gray-800 rounded-full">UX Strategy</span>
@@ -156,7 +156,17 @@
                 <span class="py-4 px-8 bg-gray-800 rounded-full">Motion Design</span>
                 <span class="py-4 px-8 bg-gray-800 rounded-full">Project Management</span>
                 <span class="py-4 px-8 bg-gray-800 rounded-full">Video Editing</span>
-            </div>
+            </div> -->
+
+            <ul class="list-disc list-inside text-gray-400 space-y-2 mt-4">
+                <li><b class="font-medium text-gray-100">Defined the design system architecture,</b> including components, patterns, layout rules, spacing, and interaction guidelines.</li>
+                <li><b class="font-medium text-gray-100">Created a modular component library</b> in Figma, ensuring consistency, reusability, and responsiveness across web and mobile breakpoints.</li>
+                <li><b class="font-medium text-gray-100">Established a visual language,</b> including typography, color schemes, iconography, and motion principles aligned with the product’s branding.</li>
+                <li><b class="font-medium text-gray-100">Collaborated closely with developers</b> to ensure pixel-perfect implementation through design specs, component documentation, and regular syncs.</li>
+                <li><b class="font-medium text-gray-100">Facilitated stakeholder alignment</b> by presenting design rationale and demonstrating the system’s value through real-world use cases.</li>
+                <li><b class="font-medium text-gray-100">Maintained and evolved the system</b> by setting up documentation, usage guidelines, and feedback loops for continuous improvement.</li>
+                <li><b class="font-medium text-gray-100">Advocated for design consistency,</b> ensuring that all modules—campaign management, CRM, FAQs, analytics—followed the same UI/UX principles.</li>
+            </ul>
         </div>
     </div>
 
@@ -220,12 +230,16 @@
     <div class="flex flex-col gap-8 px-4">
 
         <!-- Section Header -->
-        <div class="flex flex-col gap-8 lg:w-3/5 lg:m-auto lg:px-0">
+        <div class="flex flex-col gap-4 lg:w-3/5 lg:m-auto lg:px-0">
             <div class="flex flex-col gap-2">
                 <p class="text-2xl font-bold">Components</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
+            <p class="text-gray-400 mt-4">A collection of thoughtfully designed UI components forming the building blocks of the TARP Design System. Each element was created for consistency, scalability, and seamless integration across complex workflows—empowering teams to build faster and design smarter.</p>
+
         </div>
+
+        
 
         <!-- UI Designs - section wise -->
         <div class="grid grid-cols-1 gap-8 lg:w-3/5 lg:m-auto lg:px-0">
@@ -339,11 +353,12 @@
     <div class="flex flex-col gap-8 px-4">
 
         <!-- Section Header -->
-        <div class="flex flex-col gap-8 lg:w-3/5 lg:m-auto lg:px-0">
+        <div class="flex flex-col gap-4 lg:w-3/5 lg:m-auto lg:px-0">
             <div class="flex flex-col gap-2">
                 <p class="text-2xl font-bold">UI Designs/Screens</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
+            <p class="text-gray-400 mt-4">A series of high-fidelity UI screens demonstrating the application of the TARP Design System across real-world use cases. From data dashboards to campaign setup and help centers, each screen reflects a balance of usability, visual clarity, and system-wide consistency.</p>
         </div>
 
         <!-- UI Screens -->
@@ -353,8 +368,8 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-xl lg:text-2xl font-semibold">Screen 1 - </h3>
-                        <p class="text-gray-400 font-light">Metric is quantitative data that you collect & analyze and, hopefully, make better decisions based on this analysis.</p>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Screen 1 - Knowledge Centre</h3>
+                        <p class="text-gray-400 font-light">This screen showcases a centralized knowledge hub where users can browse articles and FAQs in a clean, card-based layout. The left section features visually distinct article previews categorized by topic (e.g., Education, Technology), while the right section provides instant Q&A results based on user queries. Designed for clarity and quick discovery, this screen enhances learning and onboarding experiences through effective use of hierarchy, tags, and visual grouping.</p>
 
                         <div class="w-full mt-4">
                             <img src="./images/tarp/screen_1.png" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
@@ -367,8 +382,8 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-xl lg:text-2xl font-semibold">Screen 2 - </h3>
-                        <p class="text-gray-400 font-light">Data tables display information in a grid-like format of rows and columns. They organize information in a way that's easy to scan so that users can look for patterns and develop insights from data.</p>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Screen 2 – Campaign Profile Form</h3>
+                        <p class="text-gray-400 font-light">This screen allows users to complete or edit campaign profiles through a structured, multi-section form. The layout includes fields for campaign type, use cases, date ranges, and scripts, all grouped with clear labels and intuitive spacing. The right-hand sidebar features a dynamic "Help Centre" prompt for user assistance, improving support accessibility. Designed with a focus on clarity and task flow, this screen ensures that users can input detailed data without cognitive overload.</p>
 
                         <div class="w-full mt-4">
                             <img src="./images/tarp/screen_2.png" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
@@ -381,8 +396,8 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-xl lg:text-2xl font-semibold">Screen 3 - </h3>
-                        <p class="text-gray-400 font-light">Side navigation lets users navigate the entire content of a product or a section. These can be used for a single level or a multi-level navigation.</p>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Screen 3 – Performance Dashboard & Scheduled List</h3>
+                        <p class="text-gray-400 font-light">This dashboard offers a visual snapshot of performance metrics alongside a detailed scheduled activity list. The top section presents a target summary using clear data visualizations—percentages, ratios, and status indicators—for fast, at-a-glance insights. Below, the Scheduled List organizes user interactions (calls, SMS, WhatsApp) by partner, location, language, and milestone. The design emphasizes clarity, using soft colors, icon tags, and visual separation to improve scan-ability and support daily operations with minimal friction.</p>
 
                         <div class="w-full mt-4">
                             <img src="./images/tarp/screen_3.png" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
@@ -395,8 +410,8 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-xl lg:text-2xl font-semibold">Screen 4 - </h3>
-                        <p class="text-gray-400 font-light">Filters provide a set of controls to reduce items in a collection based on attributes the user is interested in (e.g., filtering items by creation date). Filters can provide the following functionality: A list of interesting attributes common to items in a collection, and possible values to filter by.</p>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Screen 4 – Finance Dashboard & Campaign Setup</h3>
+                        <p class="text-gray-400 font-light">This screen integrates financial insights with campaign setup functionality. The top panels display key wallet, card, and budget data using clear numeric indicators and color-coded trends. Circular charts provide a quick breakdown of expenditures and budget allocations. Below, users can launch short surveys or campaigns with a structured form, complete with campaign type, dates, and custom scripts. The right-hand Expenditure List offers a summarized view of partner interactions. This unified layout enhances visibility into both financial performance and campaign operations—helping users make data-driven decisions with ease.</p>
 
                         <div class="w-full mt-4">
                             <img src="./images/tarp/screen_4.png" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
@@ -409,8 +424,8 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-xl lg:text-2xl font-semibold">Screen 5 - </h3>
-                        <p class="text-gray-400 font-light">Lists in web/mobile app UI design are galleries of text, images, or card options that can help users choose one or more options to achieve their goals effortlessly. Many common elements such as drop-down menus, list boxes, checkboxes, and radio button groups are typical examples of list UI design.</p>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Screen 5 – FAQ Explorer & Topic Navigation</h3>
+                        <p class="text-gray-400 font-light">This screen showcases a structured FAQ interface under the “Knowledge Centre.” On the left, a collapsible table of contents allows users to browse categorized topics like EC2, Container Service, and Kubernetes. On the right, an accordion-style question-answer module provides quick, expandable access to detailed information. The active question is highlighted for focus and readability. Designed for self-service support and contextual learning, this layout improves knowledge discovery through clean interaction patterns and a distraction-free reading experience.</p>
 
                         <div class="w-full mt-4">
                             <img src="./images/tarp/screen_5.png" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
