--- a/project-1.html
+++ b/project-1.html
@@ -69,7 +69,7 @@
           </h1>
           <nav class="flex gap-6">
             <a href="./about.html" class="text-white hover:text-amber-300 py-2 transition-all duration-300">About me</a>
-            <a href="#projects" class="text-white hover:text-amber-300 py-2 transition-all duration-300">Projects</a>
+            <a href="./index.html#projects" class="text-white hover:text-amber-300 py-2 transition-all duration-300">Projects</a>
             <a href="mailto:workspace0105@gmail.com" class="text-white hover:text-amber-300 py-2 transition-all duration-300">Contact</a>
           </nav>
         </div>
@@ -580,12 +580,17 @@
         <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
             <img src="./images/icons/design.svg" alt="Logo" class="w-12 h-auto mb-2"/>
             <p class="text-xl font-bold mt-4">Visual Design</p>
-            <p class="text-gray-400 mt-2">To design CHIP for real-world usability, I created role-based personas that represent the distinct needs, behaviors, and constraints of users across different healthcare levels. These personas helped ensure that each interface was tailored, contextual, and respectful of users’ daily challenges.</p>
+            <p class="text-gray-400 mt-2">Crafted a unified visual language for CHIP 2.0 that balances scalability, accessibility, and adaptability. This design system supports multiple government platforms through role-based customization, enabling consistent yet flexible user experiences across varied institutional needs.</p>
 
             <ul class="list-disc list-inside text-gray-400 space-y-2 mt-4">
-                <li><b class="text-gray-200">Color-coded modules</b> help distinguish workflows per role.</li>
-                <li><b class="text-gray-200">Icons + Labels</b> used to assist semi-literate users.</li>
-                <li>Responsive layout adapted to Android phones commonly used in the field.</li>
+                <li>Designed a scalable and modular visual system tailored for CHIP 2.0, adaptable across multiple government platforms.</li>
+                <li>Integrated <b class="text-gray-200">Role-Based Access Control (RBAC)</b> to support flexible use cases and hierarchical user experiences.</li>
+                <li>Developed customizable <b class="text-gray-200">color themes</b> to enable visual differentiation while maintaining brand consistency.</li>
+                <li>Built a comprehensive <b class="text-gray-200">design system</b> including UI components, typography, iconography, spacing, and layout rules..</li>
+                <li>Ensured <b class="text-gray-200">accessibility and usability</b> across user types, devices, and contexts through thoughtful visual hierarchy and contrast.</li>
+                <li>Streamlined <b class="text-gray-200">handoff to developers</b> by providing well-documented, reusable components in Figma.</li>
+                <li>Enabled <b class="text-gray-200">faster design iterations</b> and <b class="text-gray-200">consistent user experience</b> across various government-adapted projects.</li>
+                <li><b class="text-gray-200">Reduced design-debt</b> and <b class="text-gray-200">improved scalability</b> by aligning visuals with system logic and user roles.</li>
             </ul>
 
             <div class="w-full mx-auto">
@@ -1291,7 +1296,7 @@
     <div class="w-full flex flex-col gap-2 items-center py-16 px-3 bg-gray-950 mt-8 border-t-2 border-gray-800">
         <div class="flex flex-col text-center items-center">
             <p class="text-xl font-semibold m-2">Thank you for your interest in my work!</p>
-            <p class="bg-gray-900 px-4 py-2 rounded-xl inline-block w-max m-2"><a href="./images/general/Résumé_SumitNikhare.pdf" class="hover:text-amber-300 transition duration-500 ease-in-out">View Resume</a></p>
+            <p class="bg-gray-900 px-4 py-2 rounded-xl inline-block w-max m-2"><a href="https://drive.google.com/file/d/1CtltZkOelElah7Tzy9kSwZ1F75ozBLiJ/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="hover:text-amber-300 transition duration-500 ease-in-out">View Resume</a></p>
         </div>
         <p class="text-gray-400 m-2 text-center">Made by <a href="./about.html" class="hover:text-amber-300 transition duration-500 ease-in-out underline underline-offset-3">Sumit Nikhare</a>.  © 2024 Sumit Nikhare</p>
     </div>
