about me  - experience fixed

--- a/project-1.html
+++ b/project-1.html
@@ -593,9 +593,9 @@
                 <li><b class="text-gray-200">Reduced design-debt</b> and <b class="text-gray-200">improved scalability</b> by aligning visuals with system logic and user roles.</li>
             </ul>
 
-            <div class="w-full mx-auto">
+            <!-- <div class="w-full mx-auto">
                 <img src="./images/chip/chip cover.png" alt="Descriptive alt text" class="w-full h-auto rounded-lg shadow-md mt-4" />
-            </div>
+            </div> -->
         </div>
     </div>
 
@@ -1167,8 +1167,8 @@
     <div class="flex flex-col gap-6 px-4 lg:w-3/5 lg:m-auto lg:px-0">
 
         <!-- Section Header -->
-        <div class="flex flex-col items-center gap-8">
-            <div class="flex flex-col gap-2 items-center">
+        <div class="flex flex-col gap-8">
+            <div class="flex flex-col gap-2">
                 <p class="text-2xl font-bold">Impact & Results</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
@@ -1176,8 +1176,7 @@
 
         <div class="grid grid-cols-1 gap-8">
             <!-- Objectives -->
-            <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
-                <img src="./images/chip2/demo_svg.svg" alt="Logo" class="w-12 h-auto mb-4"/>
+            <div class="flex flex-col">
                 <p class="text-xl font-bold">Outcomes</p>
                 <ul class="list-disc list-inside text-gray-400 space-y-2 mt-4">
                     <li>3x reduction in training issues for new users</li>
@@ -1187,8 +1186,7 @@
             </div>
 
             <!-- Participants -->
-            <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
-                <img src="./images/chip2/demo_svg.svg" alt="Logo" class="w-12 h-auto mb-4"/>
+            <div class="flex flex-col">
                 <p class="text-xl font-bold">Lessons Learned</p>
                 <ul class="list-disc list-inside text-gray-400 space-y-2 mt-4">
                     <li>RBAC is not just a backend concept—it deeply affects UX clarity</li>
@@ -1205,24 +1203,22 @@
     <div class="flex flex-col gap-6 px-4 lg:w-3/5 lg:m-auto lg:px-0">
 
         <!-- Section Header -->
-        <div class="flex flex-col items-center gap-8">
-            <div class="flex flex-col gap-2 items-center">
+        <div class="flex flex-col gap-8">
+            <div class="flex flex-col gap-2">
                 <p class="text-2xl font-bold">Conclusion</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
         </div>
 
-        <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
+        <div class="grid grid-cols-1 gap-8">
             <!-- Project Reflection -->
-            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6">
-                <img src="./images/chip2/demo_svg.svg" alt="Logo" class="w-12 h-auto mb-4"/>
+            <div class="flex flex-col">
                 <p class="text-xl font-bold">Project Reflection</p>
                 <p class="text-gray-400 font-light mt-4">Designing for CHIP required creating a flexible-yet-controlled system that serves multiple user levels without overwhelming any of them. Understanding the working styles of ASHAs, ANMs, and MOs was key to building trust and usability into the app.</p>
             </div>
 
             <!-- Next Steps -->
-            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6">
-                <img src="./images/chip2/demo_svg.svg" alt="Logo" class="w-12 h-auto mb-4"/>
+            <div class="flex flex-col">
                 <p class="text-xl font-bold">Next Steps</p>
                 <ul class="list-disc list-inside text-gray-400 space-y-2 mt-4">
                     <li>Introduce visual analytics for MO dashboard</li>
