--- a/about.html
+++ b/about.html
@@ -87,10 +87,10 @@
         <div>
             <h1 class="text-3xl font-medium">Get to know more about me.</h1>
             <h2 class="font-light text-gray-400 mt-10">I’m Sumit, a UI/UX Designer with 3.3 years of experience creating user-first digital products that balance function and form. From healthcare platforms to enterprise tools, I’ve crafted experiences that make complex systems feel intuitive. My approach blends thoughtful design, usability principles, and a strong grasp of user needs to deliver solutions that truly work.</h2>
-            <h2 class="font-light text-gray-400 mt-10">With skills in Figma, HTML/CSS, and design thinking, I thrive in collaborative environments where creativity meets clarity. I’m driven by curiosity, precision, and the belief that great design solves real problems—quietly, effectively, and with just the right amount of flair.</h2>
+            <h2 class="font-light text-gray-400 mt-4">With skills in Figma, HTML/CSS, and design thinking, I thrive in collaborative environments where creativity meets clarity. I’m driven by curiosity, precision, and the belief that great design solves real problems—quietly, effectively, and with just the right amount of flair.</h2>
         </div>
         
-        <a href="./images/general/Résumé_SumitNikhare.pdf"><button class="bg-gray-800 text-white hover:text-amber-300 font-semibold py-4 px-8 rounded-full transition duration-500 ease-in-out inline-block w-max">View Resume</button></a>
+        <a href="https://drive.google.com/file/d/1CtltZkOelElah7Tzy9kSwZ1F75ozBLiJ/view?usp=sharing"><button class="bg-gray-800 text-white hover:text-amber-300 font-semibold py-4 px-8 rounded-full transition duration-500 ease-in-out inline-block w-max">View Resume</button></a>
     </div>
 
     <div class="flex flex-col gap-16">
@@ -121,7 +121,7 @@
 
                 <div class="flex flex-col gap-2">
                     <p class="font-medium text-yellow-400">Core UX/UI Skills</p>
-                    <p class="text-xl text-gray-300">Skilled in user research, UX strategy, wireframing, journey mapping, information architecture, heuristic evaluation, usability testing, and A/B testing.</p>
+                    <p class="text-gray-300 font-semibold text-xl">User research, UX strategy, Wireframing, Journey mapping, Information architecture, Heuristic evaluation, Usability testing, A/B testing</p>
                 </div>
 
                 <div class="flex flex-col gap-2">
@@ -191,7 +191,7 @@
                             <div class="flex flex-col gap-1 text-left">
                                 <p class="text-sm text-yellow-400">Permute Solutions Pvt. Ltd.</p>
                                 <h3 class="text-lg font-semibold">Associate UI/UX Designer</h3>
-                                <p class="text-sm text-gray-400">Mar 2023 - Dec 2023</p>
+                                <p class="text-sm text-gray-400">Mar 2022 - Dec 2022</p>
                             </div>
                             <span class="text-2xl transform transition-transform">&#x25BC;</span>
                             </button>
@@ -302,7 +302,7 @@
     <div class="w-full flex flex-col gap-2 items-center py-16 px-3 bg-gray-950 mt-8">
         <div class="flex flex-col text-center items-center">
             <p class="text-xl font-semibold m-2">Thank you for your interest!</p>
-            <p class="bg-gray-900 px-4 py-2 rounded-xl inline-block w-max m-2"><a href="#" class="hover:text-amber-300 transition duration-500 ease-in-out">View Resume</a></p>
+            <p class="bg-gray-900 px-4 py-2 rounded-xl inline-block w-max m-2"><a href="https://drive.google.com/file/d/1CtltZkOelElah7Tzy9kSwZ1F75ozBLiJ/view?usp=sharing" class="hover:text-amber-300 transition duration-500 ease-in-out">View Resume</a></p>
         </div>
         <p class="text-gray-400 m-2 text-center">Made by <a href="./about.html" class="hover:text-amber-300 transition duration-500 ease-in-out underline underline-offset-3">Sumit Nikhare</a>.  © 2024 Sumit Nikhare</p>
     </div>
