hero of index fixed

--- a/index.html
+++ b/index.html
@@ -163,25 +163,33 @@
       
 
     <!-- Hero -->
-    <div class="flex flex-col gap-8 justify-center items-center text-center h-screen px-4 lg:w-3/5 lg:m-auto lg:px-0">
-
-        <div class="text-center space-y-4">
-            <div class="text-2xl lg:text-3xl font-serif text-gray-400 flex flex-wrap justify-center items-center gap-2">
-                <span>Hey, I'm</span>
-                <img src="./images/general/my-photo copy.jpg" alt="Profile" class="wobbly-image w-16 h-16 rounded-full object-cover mx-3 border-2 border-amber-300 transition-all ease-in-out duration-500">
-                <span class="font-black text-gray-100">Sumit Nikhare</span>
-            </div>
-            <div class="text-xl lg:text-2xl font-serif flex flex-wrap justify-center items-center gap-2">
-                <span class="text-amber-300 font-serif font-bold">UI/UX designer <span class="text-gray-400 font-normal"> at</span></span>                  
-                <img src="./images/general/kb_logo.png" alt="Gift Icon" class="w-auto h-12 transition-all ease-in-out duration-500 hover:scale-105">
-            </div>
-            <div class="text-xl font-serif text-gray-400 flex flex-wrap justify-center items-center gap-2">
-                <span>based in</span>
-                <span class="font-black text-gray-100">Jaipur,</span>
-                <span class="font-black text-gray-100">IN</span>
-            </div>
+    <section class="flex flex-col items-center justify-center min-h-screen px-4">
+      <div class="max-w-3xl w-full flex flex-col items-center justify-center text-center gap-8 relative">
+        <h1 class="text-5xl md:text-6xl font-extrabold text-white font-serif tracking-tight">Hi!</h1>
+        <div class="relative flex flex-col items-center w-full">
+          <div class="flex flex-col items-center">
+            <h2 class="text-xl md:text-2xl font-semibold text-white font-serif leading-tight">
+              My name is <span class="text-amber-300">Sumit Nikhare.</span><br>
+              <span class="text-gray-200">UI/UX designer based in Jaipur, IN.</span>
+            </h2>
+          </div>
+          <!-- Geometric accent and photo -->
+          <div class="relative flex items-center justify-center mt-8 mb-4">
+            <!-- Geometric SVG accent -->
+            <svg width="110" height="80" viewBox="0 0 110 80" fill="none" xmlns="http://www.w3.org/2000/svg" class="absolute left-1/2 -translate-x-1/2 top-0 z-0">
+              <path d="M0,80 A80,80 0 1,1 110,80 Z" fill="#eab308" fill-opacity="0.85"/>
+            </svg>
+            <!-- User photo -->
+            <img src="./images/general/my-photo copy.jpg" alt="Profile" class="w-24 h-24 rounded-full object-cover border-4 border-gray-900 shadow-xl relative z-10" style="margin-left: 48px;"/>
+            <!-- Accent circle -->
+            <span class="absolute right-0 top-2 w-8 h-8 rounded-full bg-amber-400 opacity-90 z-10"></span>
+          </div>
         </div>
-    </div>
+        <div class="mt-8 flex justify-center w-full">
+          <span class="animate-bounce text-3xl text-amber-300">↓</span>
+        </div>
+      </div>
+    </section>
 
     <!-- Projects -->
     <div id="projects" class="flex flex-col gap-12 px-4 lg:w-3/5 lg:m-auto lg:px-0">
